Fix margin - Little adjust to align start map to text (36 instead of 40)

--- a/app/javascript/app/components/ndcs/ndcs-table/ndcs-table-styles.scss
+++ b/app/javascript/app/components/ndcs/ndcs-table/ndcs-table-styles.scss
@@ -7,13 +7,13 @@
   @include msGridColumns(1fr, 1fr);
 
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(2, 1fr);
   align-items: end;
 
   @media #{$tablet-landscape} {
     @include msGridColumns(1fr, 1fr, 1fr, 1fr);
 
     grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 36px;
   }
 }
 
